--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/CSS/app.css">
+        
 </head>
 <body>
     <header>
@@ -20,6 +22,7 @@
             <a href="https://www.github.com/AbishaiFC">@AbishaiFC</a>
         </p>
     </header>
-
+<script src="/JS/Ejercicio_01.js"></script>
+<script src="/JS/Ejercicio_02.js"></script>
 </body>
 </html>
